--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <hr>
     </div>
 
-    <script src="./dist/bundle.js"></script>
+    <script src="bundle.js"></script>
 </body>
 
 </html>
